--- a/public/sass/layout/_country-details.scss
+++ b/public/sass/layout/_country-details.scss
@@ -23,7 +23,7 @@
       width: 56rem;
       height: 36rem;
       img{
-        object-fit: fill;
+        object-fit: contain;
       }
     }
     .texts {
